// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`tidscan.sql > line 6 1`] = `
[
  "INSERT INTO tidscan VALUES (1), (2), (3)",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "override": "OVERRIDING_NOT_SET",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "tidscan",
              "relpersistence": "p",
            },
            "selectStmt": {
              "SelectStmt": {
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "valuesLists": [
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 1,
                            },
                            "location": 28,
                          },
                        },
                      ],
                    },
                  },
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 2,
                            },
                            "location": 33,
                          },
                        },
                      ],
                    },
                  },
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 3,
                            },
                            "location": 38,
                          },
                        },
                      ],
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tidscan.sql > line 9 1`] = `
[
  "SELECT ctid, * FROM tidscan",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 20,
                  "relname": "tidscan",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "ctid",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 13,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 13,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tidscan.sql > line 12 1`] = `
[
  "EXPLAIN (COSTS OFF)
SELECT ctid, * FROM tidscan WHERE ctid = '(0,1)'",
  {
    "stmts": [
      {
        "stmt": {
          "ExplainStmt": {
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "off",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "costs",
                  "location": 9,
                },
              },
            ],
            "query": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 40,
                      "relname": "tidscan",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 27,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "ctid",
                              },
                            },
                          ],
                          "location": 27,
                        },
                      },
                    },
                  },
                  {
                    "ResTarget": {
                      "location": 33,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "A_Star": {},
                            },
                          ],
                          "location": 33,
                        },
                      },
                    },
                  },
                ],
                "whereClause": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "ctid",
                            },
                          },
                        ],
                        "location": 54,
                      },
                    },
                    "location": 59,
                    "name": [
                      {
                        "String": {
                          "sval": "=",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "location": 61,
                        "sval": {
                          "sval": "(0,1)",
                        },
                      },
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tidscan.sql > line 16 1`] = `
[
  "EXPLAIN (COSTS OFF)
SELECT ctid, * FROM tidscan WHERE '(0,1)' = ctid",
  {
    "stmts": [
      {
        "stmt": {
          "ExplainStmt": {
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "off",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "costs",
                  "location": 9,
                },
              },
            ],
            "query": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 40,
                      "relname": "tidscan",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 27,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "ctid",
                              },
                            },
                          ],
                          "location": 27,
                        },
                      },
                    },
                  },
                  {
                    "ResTarget": {
                      "location": 33,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "A_Star": {},
                            },
                          ],
                          "location": 33,
                        },
                      },
                    },
                  },
                ],
                "whereClause": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "A_Const": {
                        "location": 54,
                        "sval": {
                          "sval": "(0,1)",
                        },
                      },
                    },
                    "location": 62,
                    "name": [
                      {
                        "String": {
                          "sval": "=",
                        },
                      },
                    ],
                    "rexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "ctid",
                            },
                          },
                        ],
                        "location": 64,
                      },
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tidscan.sql > line 21 1`] = `
[
  "EXPLAIN (COSTS OFF)
SELECT ctid, * FROM tidscan WHERE ctid = '(0,2)' OR '(0,1)' = ctid",
  {
    "stmts": [
      {
        "stmt": {
          "ExplainStmt": {
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "off",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "costs",
                  "location": 9,
                },
              },
            ],
            "query": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 40,
                      "relname": "tidscan",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 27,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "ctid",
                              },
                            },
                          ],
                          "location": 27,
                        },
                      },
                    },
                  },
                  {
                    "ResTarget": {
                      "location": 33,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "A_Star": {},
                            },
                          ],
                          "location": 33,
                        },
                      },
                    },
                  },
                ],
                "whereClause": {
                  "BoolExpr": {
                    "args": [
                      {
                        "A_Expr": {
                          "kind": "AEXPR_OP",
                          "lexpr": {
                            "ColumnRef": {
                              "fields": [
                                {
                                  "String": {
                                    "sval": "ctid",
                                  },
                                },
                              ],
                              "location": 54,
                            },
                          },
                          "location": 59,
                          "name": [
                            {
                              "String": {
                                "sval": "=",
                              },
                            },
                          ],
                          "rexpr": {
                            "A_Const": {
                              "location": 61,
                              "sval": {
                                "sval": "(0,2)",
                              },
                            },
                          },
                        },
                      },
                      {
                        "A_Expr": {
                          "kind": "AEXPR_OP",
                          "lexpr": {
                            "A_Const": {
                              "location": 72,
                              "sval": {
                                "sval": "(0,1)",
                              },
                            },
                          },
                          "location": 80,
                          "name": [
                            {
                              "String": {
                                "sval": "=",
                              },
                            },
                          ],
                          "rexpr": {
                            "ColumnRef": {
                              "fields": [
                                {
                                  "String": {
                                    "sval": "ctid",
                                  },
                                },
                              ],
                              "location": 82,
                            },
                          },
                        },
                      },
                    ],
                    "boolop": "OR_EXPR",
                    "location": 69,
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tidscan.sql > line 26 1`] = `
[
  "EXPLAIN (COSTS OFF)
SELECT ctid, * FROM tidscan WHERE ctid = ANY(ARRAY['(0,1)', '(0,2)']::tid[])",
  {
    "stmts": [
      {
        "stmt": {
          "ExplainStmt": {
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "off",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "costs",
                  "location": 9,
                },
              },
            ],
            "query": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 40,
                      "relname": "tidscan",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 27,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "ctid",
                              },
                            },
                          ],
                          "location": 27,
                        },
                      },
                    },
                  },
                  {
                    "ResTarget": {
                      "location": 33,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "A_Star": {},
                            },
                          ],
                          "location": 33,
                        },
                      },
                    },
                  },
                ],
                "whereClause": {
                  "A_Expr": {
                    "kind": "AEXPR_OP_ANY",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "ctid",
                            },
                          },
                        ],
                        "location": 54,
                      },
                    },
                    "location": 59,
                    "name": [
                      {
                        "String": {
                          "sval": "=",
                        },
                      },
                    ],
                    "rexpr": {
                      "TypeCast": {
                        "arg": {
                          "A_ArrayExpr": {
                            "elements": [
                              {
                                "A_Const": {
                                  "location": 71,
                                  "sval": {
                                    "sval": "(0,1)",
                                  },
                                },
                              },
                              {
                                "A_Const": {
                                  "location": 80,
                                  "sval": {
                                    "sval": "(0,2)",
                                  },
                                },
                              },
                            ],
                            "location": 65,
                          },
                        },
                        "location": 88,
                        "typeName": {
                          "arrayBounds": [
                            {
                              "Integer": {},
                            },
                          ],
                          "location": 90,
                          "names": [
                            {
                              "String": {
                                "sval": "tid",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tidscan.sql > line 31 1`] = `
[
  "EXPLAIN (COSTS OFF)
SELECT ctid, * FROM tidscan WHERE ctid != ANY(ARRAY['(0,1)', '(0,2)']::tid[])",
  {
    "stmts": [
      {
        "stmt": {
          "ExplainStmt": {
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "off",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "costs",
                  "location": 9,
                },
              },
            ],
            "query": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 40,
                      "relname": "tidscan",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 27,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "ctid",
                              },
                            },
                          ],
                          "location": 27,
                        },
                      },
                    },
                  },
                  {
                    "ResTarget": {
                      "location": 33,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "A_Star": {},
                            },
                          ],
                          "location": 33,
                        },
                      },
                    },
                  },
                ],
                "whereClause": {
                  "A_Expr": {
                    "kind": "AEXPR_OP_ANY",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "ctid",
                            },
                          },
                        ],
                        "location": 54,
                      },
                    },
                    "location": 59,
                    "name": [
                      {
                        "String": {
                          "sval": "<>",
                        },
                      },
                    ],
                    "rexpr": {
                      "TypeCast": {
                        "arg": {
                          "A_ArrayExpr": {
                            "elements": [
                              {
                                "A_Const": {
                                  "location": 72,
                                  "sval": {
                                    "sval": "(0,1)",
                                  },
                                },
                              },
                              {
                                "A_Const": {
                                  "location": 81,
                                  "sval": {
                                    "sval": "(0,2)",
                                  },
                                },
                              },
                            ],
                            "location": 66,
                          },
                        },
                        "location": 89,
                        "typeName": {
                          "arrayBounds": [
                            {
                              "Integer": {},
                            },
                          ],
                          "location": 91,
                          "names": [
                            {
                              "String": {
                                "sval": "tid",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tidscan.sql > line 36 1`] = `
[
  "EXPLAIN (COSTS OFF)
SELECT ctid, * FROM tidscan
WHERE (id = 3 AND ctid IN ('(0,2)', '(0,3)')) OR (ctid = '(0,1)' AND id = 1)",
  {
    "stmts": [
      {
        "stmt": {
          "ExplainStmt": {
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "off",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "costs",
                  "location": 9,
                },
              },
            ],
            "query": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 40,
                      "relname": "tidscan",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 27,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "ctid",
                              },
                            },
                          ],
                          "location": 27,
                        },
                      },
                    },
                  },
                  {
                    "ResTarget": {
                      "location": 33,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "A_Star": {},
                            },
                          ],
                          "location": 33,
                        },
                      },
                    },
                  },
                ],
                "whereClause": {
                  "BoolExpr": {
                    "args": [
                      {
                        "BoolExpr": {
                          "args": [
                            {
                              "A_Expr": {
                                "kind": "AEXPR_OP",
                                "lexpr": {
                                  "ColumnRef": {
                                    "fields": [
                                      {
                                        "String": {
                                          "sval": "id",
                                        },
                                      },
                                    ],
                                    "location": 55,
                                  },
                                },
                                "location": 58,
                                "name": [
                                  {
                                    "String": {
                                      "sval": "=",
                                    },
                                  },
                                ],
                                "rexpr": {
                                  "A_Const": {
                                    "ival": {
                                      "ival": 3,
                                    },
                                    "location": 60,
                                  },
                                },
                              },
                            },
                            {
                              "A_Expr": {
                                "kind": "AEXPR_IN",
                                "lexpr": {
                                  "ColumnRef": {
                                    "fields": [
                                      {
                                        "String": {
                                          "sval": "ctid",
                                        },
                                      },
                                    ],
                                    "location": 66,
                                  },
                                },
                                "location": 71,
                                "name": [
                                  {
                                    "String": {
                                      "sval": "=",
                                    },
                                  },
                                ],
                                "rexpr": {
                                  "List": {
                                    "items": [
                                      {
                                        "A_Const": {
                                          "location": 75,
                                          "sval": {
                                            "sval": "(0,2)",
                                          },
                                        },
                                      },
                                      {
                                        "A_Const": {
                                          "location": 84,
                                          "sval": {
                                            "sval": "(0,3)",
                                          },
                                        },
                                      },
                                    ],
                                  },
                                },
                              },
                            },
                          ],
                          "boolop": "AND_EXPR",
                          "location": 62,
                        },
                      },
                      {
                        "BoolExpr": {
                          "args": [
                            {
                              "A_Expr": {
                                "kind": "AEXPR_OP",
                                "lexpr": {
                                  "ColumnRef": {
                                    "fields": [
                                      {
                                        "String": {
                                          "sval": "ctid",
                                        },
                                      },
                                    ],
                                    "location": 98,
                                  },
                                },
                                "location": 103,
                                "name": [
                                  {
                                    "String": {
                                      "sval": "=",
                                    },
                                  },
                                ],
                                "rexpr": {
                                  "A_Const": {
                                    "location": 105,
                                    "sval": {
                                      "sval": "(0,1)",
                                    },
                                  },
                                },
                              },
                            },
                            {
                              "A_Expr": {
                                "kind": "AEXPR_OP",
                                "lexpr": {
                                  "ColumnRef": {
                                    "fields": [
                                      {
                                        "String": {
                                          "sval": "id",
                                        },
                                      },
                                    ],
                                    "location": 117,
                                  },
                                },
                                "location": 120,
                                "name": [
                                  {
                                    "String": {
                                      "sval": "=",
                                    },
                                  },
                                ],
                                "rexpr": {
                                  "A_Const": {
                                    "ival": {
                                      "ival": 1,
                                    },
                                    "location": 122,
                                  },
                                },
                              },
                            },
                          ],
                          "boolop": "AND_EXPR",
                          "location": 113,
                        },
                      },
                    ],
                    "boolop": "OR_EXPR",
                    "location": 94,
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tidscan.sql > line 43 1`] = `
[
  "SET enable_hashjoin TO off",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "args": [
              {
                "A_Const": {
                  "location": 23,
                  "sval": {
                    "sval": "off",
                  },
                },
              },
            ],
            "kind": "VAR_SET_VALUE",
            "name": "enable_hashjoin",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tidscan.sql > line 43 2`] = `
[
  "  -- otherwise hash join might win
EXPLAIN (COSTS OFF)
SELECT t1.ctid, t1.*, t2.ctid, t2.*
FROM tidscan t1 JOIN tidscan t2 ON t1.ctid = t2.ctid WHERE t1.id = 1",
  {
    "stmts": [
      {
        "stmt": {
          "ExplainStmt": {
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "off",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "costs",
                  "location": 44,
                },
              },
            ],
            "query": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "JoinExpr": {
                      "jointype": "JOIN_INNER",
                      "larg": {
                        "RangeVar": {
                          "alias": {
                            "aliasname": "t1",
                          },
                          "inh": true,
                          "location": 96,
                          "relname": "tidscan",
                          "relpersistence": "p",
                        },
                      },
                      "quals": {
                        "A_Expr": {
                          "kind": "AEXPR_OP",
                          "lexpr": {
                            "ColumnRef": {
                              "fields": [
                                {
                                  "String": {
                                    "sval": "t1",
                                  },
                                },
                                {
                                  "String": {
                                    "sval": "ctid",
                                  },
                                },
                              ],
                              "location": 126,
                            },
                          },
                          "location": 134,
                          "name": [
                            {
                              "String": {
                                "sval": "=",
                              },
                            },
                          ],
                          "rexpr": {
                            "ColumnRef": {
                              "fields": [
                                {
                                  "String": {
                                    "sval": "t2",
                                  },
                                },
                                {
                                  "String": {
                                    "sval": "ctid",
                                  },
                                },
                              ],
                              "location": 136,
                            },
                          },
                        },
                      },
                      "rarg": {
                        "RangeVar": {
                          "alias": {
                            "aliasname": "t2",
                          },
                          "inh": true,
                          "location": 112,
                          "relname": "tidscan",
                          "relpersistence": "p",
                        },
                      },
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 62,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "t1",
                              },
                            },
                            {
                              "String": {
                                "sval": "ctid",
                              },
                            },
                          ],
                          "location": 62,
                        },
                      },
                    },
                  },
                  {
                    "ResTarget": {
                      "location": 71,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "t1",
                              },
                            },
                            {
                              "A_Star": {},
                            },
                          ],
                          "location": 71,
                        },
                      },
                    },
                  },
                  {
                    "ResTarget": {
                      "location": 77,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "t2",
                              },
                            },
                            {
                              "String": {
                                "sval": "ctid",
                              },
                            },
                          ],
                          "location": 77,
                        },
                      },
                    },
                  },
                  {
                    "ResTarget": {
                      "location": 86,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "t2",
                              },
                            },
                            {
                              "A_Star": {},
                            },
                          ],
                          "location": 86,
                        },
                      },
                    },
                  },
                ],
                "whereClause": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "t1",
                            },
                          },
                          {
                            "String": {
                              "sval": "id",
                            },
                          },
                        ],
                        "location": 150,
                      },
                    },
                    "location": 156,
                    "name": [
                      {
                        "String": {
                          "sval": "=",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "ival": {
                          "ival": 1,
                        },
                        "location": 158,
                      },
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tidscan.sql > line 50 1`] = `
[
  "SELECT t1.ctid, t1.*, t2.ctid, t2.*
FROM tidscan t1 LEFT JOIN tidscan t2 ON t1.ctid = t2.ctid WHERE t1.id = 1",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "JoinExpr": {
                  "jointype": "JOIN_LEFT",
                  "larg": {
                    "RangeVar": {
                      "alias": {
                        "aliasname": "t1",
                      },
                      "inh": true,
                      "location": 41,
                      "relname": "tidscan",
                      "relpersistence": "p",
                    },
                  },
                  "quals": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "t1",
                              },
                            },
                            {
                              "String": {
                                "sval": "ctid",
                              },
                            },
                          ],
                          "location": 76,
                        },
                      },
                      "location": 84,
                      "name": [
                        {
                          "String": {
                            "sval": "=",
                          },
                        },
                      ],
                      "rexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "t2",
                              },
                            },
                            {
                              "String": {
                                "sval": "ctid",
                              },
                            },
                          ],
                          "location": 86,
                        },
                      },
                    },
                  },
                  "rarg": {
                    "RangeVar": {
                      "alias": {
                        "aliasname": "t2",
                      },
                      "inh": true,
                      "location": 62,
                      "relname": "tidscan",
                      "relpersistence": "p",
                    },
                  },
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "t1",
                          },
                        },
                        {
                          "String": {
                            "sval": "ctid",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 16,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "t1",
                          },
                        },
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 16,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 22,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "t2",
                          },
                        },
                        {
                          "String": {
                            "sval": "ctid",
                          },
                        },
                      ],
                      "location": 22,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 31,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "t2",
                          },
                        },
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 31,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "t1",
                        },
                      },
                      {
                        "String": {
                          "sval": "id",
                        },
                      },
                    ],
                    "location": 100,
                  },
                },
                "location": 106,
                "name": [
                  {
                    "String": {
                      "sval": "=",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "ival": {
                      "ival": 1,
                    },
                    "location": 108,
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tidscan.sql > line 57 1`] = `
[
  "BEGIN",
  {
    "stmts": [
      {
        "stmt": {
          "TransactionStmt": {
            "kind": "TRANS_STMT_BEGIN",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tidscan.sql > line 59 1`] = `
[
  "SELECT ctid, * FROM tidscan WHERE ctid = ANY(ARRAY['(0,1)', '(0,2)']::tid[])",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 20,
                  "relname": "tidscan",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "ctid",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 13,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 13,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP_ANY",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "ctid",
                        },
                      },
                    ],
                    "location": 34,
                  },
                },
                "location": 39,
                "name": [
                  {
                    "String": {
                      "sval": "=",
                    },
                  },
                ],
                "rexpr": {
                  "TypeCast": {
                    "arg": {
                      "A_ArrayExpr": {
                        "elements": [
                          {
                            "A_Const": {
                              "location": 51,
                              "sval": {
                                "sval": "(0,1)",
                              },
                            },
                          },
                          {
                            "A_Const": {
                              "location": 60,
                              "sval": {
                                "sval": "(0,2)",
                              },
                            },
                          },
                        ],
                        "location": 45,
                      },
                    },
                    "location": 68,
                    "typeName": {
                      "arrayBounds": [
                        {
                          "Integer": {},
                        },
                      ],
                      "location": 70,
                      "names": [
                        {
                          "String": {
                            "sval": "tid",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tidscan.sql > line 68 1`] = `
[
  " -- skip one row
FETCH NEXT FROM c",
  {
    "stmts": [
      {
        "stmt": {
          "FetchStmt": {
            "direction": "FETCH_FORWARD",
            "howMany": 1,
            "portalname": "c",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tidscan.sql > line 71 1`] = `
[
  "EXPLAIN (ANALYZE, COSTS OFF, SUMMARY OFF, TIMING OFF)
UPDATE tidscan SET id = -id WHERE CURRENT OF c RETURNING *",
  {
    "stmts": [
      {
        "stmt": {
          "ExplainStmt": {
            "options": [
              {
                "DefElem": {
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "analyze",
                  "location": 9,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "off",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "costs",
                  "location": 18,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "off",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "summary",
                  "location": 29,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "off",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "timing",
                  "location": 42,
                },
              },
            ],
            "query": {
              "UpdateStmt": {
                "relation": {
                  "inh": true,
                  "location": 61,
                  "relname": "tidscan",
                  "relpersistence": "p",
                },
                "returningList": [
                  {
                    "ResTarget": {
                      "location": 111,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "A_Star": {},
                            },
                          ],
                          "location": 111,
                        },
                      },
                    },
                  },
                ],
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 73,
                      "name": "id",
                      "val": {
                        "A_Expr": {
                          "kind": "AEXPR_OP",
                          "location": 78,
                          "name": [
                            {
                              "String": {
                                "sval": "-",
                              },
                            },
                          ],
                          "rexpr": {
                            "ColumnRef": {
                              "fields": [
                                {
                                  "String": {
                                    "sval": "id",
                                  },
                                },
                              ],
                              "location": 79,
                            },
                          },
                        },
                      },
                    },
                  },
                ],
                "whereClause": {
                  "CurrentOfExpr": {
                    "cursor_name": "c",
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tidscan.sql > line 88 1`] = `
[
  "EXPLAIN (COSTS OFF)
SELECT count(*) FROM tenk1 t1 JOIN tenk1 t2 ON t1.ctid = t2.ctid",
  {
    "stmts": [
      {
        "stmt": {
          "ExplainStmt": {
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "off",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "costs",
                  "location": 9,
                },
              },
            ],
            "query": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "JoinExpr": {
                      "jointype": "JOIN_INNER",
                      "larg": {
                        "RangeVar": {
                          "alias": {
                            "aliasname": "t1",
                          },
                          "inh": true,
                          "location": 41,
                          "relname": "tenk1",
                          "relpersistence": "p",
                        },
                      },
                      "quals": {
                        "A_Expr": {
                          "kind": "AEXPR_OP",
                          "lexpr": {
                            "ColumnRef": {
                              "fields": [
                                {
                                  "String": {
                                    "sval": "t1",
                                  },
                                },
                                {
                                  "String": {
                                    "sval": "ctid",
                                  },
                                },
                              ],
                              "location": 67,
                            },
                          },
                          "location": 75,
                          "name": [
                            {
                              "String": {
                                "sval": "=",
                              },
                            },
                          ],
                          "rexpr": {
                            "ColumnRef": {
                              "fields": [
                                {
                                  "String": {
                                    "sval": "t2",
                                  },
                                },
                                {
                                  "String": {
                                    "sval": "ctid",
                                  },
                                },
                              ],
                              "location": 77,
                            },
                          },
                        },
                      },
                      "rarg": {
                        "RangeVar": {
                          "alias": {
                            "aliasname": "t2",
                          },
                          "inh": true,
                          "location": 55,
                          "relname": "tenk1",
                          "relpersistence": "p",
                        },
                      },
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 27,
                      "val": {
                        "FuncCall": {
                          "agg_star": true,
                          "funcformat": "COERCE_EXPLICIT_CALL",
                          "funcname": [
                            {
                              "String": {
                                "sval": "count",
                              },
                            },
                          ],
                          "location": 27,
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tidscan.sql > line 93 1`] = `
[
  "SELECT count(*) FROM tenk1 t1 JOIN tenk1 t2 ON t1.ctid = t2.ctid",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "JoinExpr": {
                  "jointype": "JOIN_INNER",
                  "larg": {
                    "RangeVar": {
                      "alias": {
                        "aliasname": "t1",
                      },
                      "inh": true,
                      "location": 21,
                      "relname": "tenk1",
                      "relpersistence": "p",
                    },
                  },
                  "quals": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "t1",
                              },
                            },
                            {
                              "String": {
                                "sval": "ctid",
                              },
                            },
                          ],
                          "location": 47,
                        },
                      },
                      "location": 55,
                      "name": [
                        {
                          "String": {
                            "sval": "=",
                          },
                        },
                      ],
                      "rexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "t2",
                              },
                            },
                            {
                              "String": {
                                "sval": "ctid",
                              },
                            },
                          ],
                          "location": 57,
                        },
                      },
                    },
                  },
                  "rarg": {
                    "RangeVar": {
                      "alias": {
                        "aliasname": "t2",
                      },
                      "inh": true,
                      "location": 35,
                      "relname": "tenk1",
                      "relpersistence": "p",
                    },
                  },
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "agg_star": true,
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "count",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tidscan.sql > line 101 1`] = `
[
  "SELECT locktype, mode FROM pg_locks WHERE pid = pg_backend_pid() AND mode = 'SIReadLock'",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 27,
                  "relname": "pg_locks",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "locktype",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 17,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "mode",
                          },
                        },
                      ],
                      "location": 17,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "BoolExpr": {
                "args": [
                  {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "pid",
                              },
                            },
                          ],
                          "location": 42,
                        },
                      },
                      "location": 46,
                      "name": [
                        {
                          "String": {
                            "sval": "=",
                          },
                        },
                      ],
                      "rexpr": {
                        "FuncCall": {
                          "funcformat": "COERCE_EXPLICIT_CALL",
                          "funcname": [
                            {
                              "String": {
                                "sval": "pg_backend_pid",
                              },
                            },
                          ],
                          "location": 48,
                        },
                      },
                    },
                  },
                  {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "mode",
                              },
                            },
                          ],
                          "location": 69,
                        },
                      },
                      "location": 74,
                      "name": [
                        {
                          "String": {
                            "sval": "=",
                          },
                        },
                      ],
                      "rexpr": {
                        "A_Const": {
                          "location": 76,
                          "sval": {
                            "sval": "SIReadLock",
                          },
                        },
                      },
                    },
                  },
                ],
                "boolop": "AND_EXPR",
                "location": 65,
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tidscan.sql > line 104 1`] = `
[
  "DROP TABLE tidscan",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_RESTRICT",
            "objects": [
              {
                "List": {
                  "items": [
                    {
                      "String": {
                        "sval": "tidscan",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_TABLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;
